@@ -1,5 +1,5 @@
-#encoding: utf-8
-require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
+# encoding: utf-8
+require File.dirname(__FILE__) + '/../../spec_helper'
 
 module Gherkin
   module Lexer
